serd (0.14.0) stable;

  * Use path variables in pkgconfig files
  * Install man page to DATADIR (e.g. PREFIX/share/man, not PREFIX/man)
  * Tolerate invalid characters in string literals by replacing with the
    Unicode replacement character
  * Report reason for failure to open file in serdi
  * Improve write performance by doing bulk writes for unescaped substrings
  * Add SerdBulkSink for writing bulk output and corresponding serdi -B option
  * Add serdi -f option to prevent URI qualification
  * Remove use of multi-byte peek (readahead) and use exactly 1 page for
    read buffer (instead of 2)
  * Handle a quote as the last character of a long string literal in the
    writer (by escaping it) rather than the reader, to avoid writing Turtle
    other tools fail to parse.
  * Add serd_strtod(), serd_node_new_decimal(), and serd_node_new_integer()
    for locale-independent numeric node parsing/serialising.
  * Add serd_file_sink for easy writing to a FILE* stream.
  * Add serd_chunk_sink for easy writing to a string.
  * Escape ASCII control characters in output (e.g. fix problems with string
    literals that start with a backspace)
  * Improve URI resolution to cover most of the abnormal cases from RFC3986
  * Support file://localhost/foo URIs in serd_uri_to_path()
  * Support Windows file://c:/foo URIs in serd_uri_to_path() on all platforms
  * Add serd_node_new_blob and serd_base64_decode for handling arbitrary
    binary data via base64 encoding.
  * Support compilation as C++ under MSVC++.
  * Implement pretty-printing for collections.
  * Parse collections iteratively in O(1) space.
  * Report read error if both "genid" and "docid" IDs are found in the same
    document, to prevent silent merging of distinct blank nodes.
  * Handle files and strings that start with a UTF-8 Byte Order Mark.
  * Add serd_writer_get_env().
  * Add serd_node_new_file_uri() and serd_file_uri_parse() and implement
    proper URI to/from path hex escaping, etc.